--- a/Churn/Regression_Logistic-Copy1.ipynb
+++ b/Churn/Regression_Logistic-Copy1.ipynb
@@ -28,7 +28,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "ToggleButton(value=False, description='Show code')"
+       "ToggleButton(value=True, description='Show code')"
       ]
      },
      "metadata": {},
