--- a/Churn/Regression_Logistic-Copy1.ipynb
+++ b/Churn/Regression_Logistic-Copy1.ipynb
@@ -28,7 +28,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "ToggleButton(value=True, description='Show code')"
+       "ToggleButton(value=False, description='Show code')"
       ]
      },
      "metadata": {},
@@ -69,7 +69,7 @@
     "    value.owner.description = button_descriptions[state]\n",
     "\n",
     "\n",
-    "state = False\n",
+    "state = True\n",
     "toggle_code(state)\n",
     "\n",
     "button = widgets.ToggleButton(state, description = button_descriptions[state])\n",
