--- a/Churn/Regression_Logistic-Copy1.ipynb
+++ b/Churn/Regression_Logistic-Copy1.ipynb
@@ -69,7 +69,7 @@
     "    value.owner.description = button_descriptions[state]\n",
     "\n",
     "\n",
-    "state = True\n",
+    "state = False\n",
     "toggle_code(state)\n",
     "\n",
     "button = widgets.ToggleButton(state, description = button_descriptions[state])\n",
