--- a/Churn/Style_Sheet.ipynb
+++ b/Churn/Style_Sheet.ipynb
@@ -23,15 +23,27 @@
     "               'figure.titlesize': font_size*1.5}\n",
     "\n",
     "# color palette\n",
-    "color = ['#D8117D', '#1C1C3E', '#66658A'] "
+    "color = ['#3498DB', '#1C1C3E', '#66658A'] \n",
+    "\n",
+    "# centre image\n",
+    "from IPython.core.display import HTML\n",
+    "centre_img = HTML(\"\"\"\n",
+    "<style>\n",
+    ".output_png {\n",
+    "    display: table-cell;\n",
+    "    text-align: center;\n",
+    "    vertical-align: middle;\n",
+    "}\n",
+    "</style>\n",
+    "\"\"\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -43,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
