--- a/Churn/Churn_analysis.ipynb
+++ b/Churn/Churn_analysis.ipynb
@@ -12,33 +12,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bfa3c69",
-   "metadata": {},
-   "source": [
-    "<h2><font color='#3498DB'>Contents</font></h2>\n",
-    "\n",
-    "<ul>\n",
-    "    <li>Brief</li>\n",
-    "    <li>Data exploration</li>\n",
-    "    <li>Methodology</li>\n",
-    "    <li>Analysis</li>\n",
-    "    <ul>\n",
-    "        <li>Assessing the model</li>\n",
-    "        <li>Predictions</li>\n",
-    "    </ul>\n",
-    "    <li>Insights</li>\n",
-    "</ul>\n",
-    "\n",
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bd9067cf",
    "metadata": {},
    "source": [
-    "<hr>\n",
-    "\n",
     "<br>\n",
     "\n",
     "<h2><font color='#3498DB'>Brief</font></h2>\n",
@@ -66,8 +42,6 @@
     "<br>\n",
     "\n",
     "<h2><font color='#3498DB'>Data exploration</font></h2>\n",
-    "\n",
-    "<br>\n",
     "\n",
     "<h3><font color='#90949C'>What data is available?</font></h3>\n",
     "\n",
@@ -302,8 +276,8 @@
     "fig, [ax_1, ax_2] = plt.subplots(nrows=1, ncols=2, figsize=(18,8))\n",
     "\n",
     "# viz\n",
-    "viz_hist(df, 'time_since_last_purchase', False, ax_1, 'Fig 1. Recency - time_since_last_purchase')\n",
-    "viz_hist(df, 'time_since_first_purchase', False, ax_2, 'Fig 2. Tenure - time_since_first_purchase')\n",
+    "viz_hist(df, 'time_since_last_purchase', False, ax_1, '1.1 Recency - time_since_last_purchase')\n",
+    "viz_hist(df, 'time_since_first_purchase', False, ax_2, '1.2 Tenure - time_since_first_purchase')\n",
     "\n",
     "# show\n",
     "plt.show()"
@@ -320,7 +294,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "<p>The <code>time_since_last_purchase</code> distributions reveal several strong trends: 99% of the churned population have not purchased within the last 6 months, 55% have not purchased in the last 1.5 years; in the retained population 100% have purchased within the last 1.5 years, with 54% making the purhase in the last 6 months. These trends coalesce as <i>customers with longer</i> <code>time_since_last_purchase</code> <i>are more likely to have churned</i>. The <code>kde</code> distribution further illustrates how the long tail of recency is a strong indicator of churn.</p>\n",
+    "<p>The <code>time_since_last_purchase</code> distributions reveal several strong trends: 99% of the churned population have not purchased within the last 6 months, 55% have not purchased in the last 1.5 years; in the retained population 100% have purchased within the last 1.5 years, with 54% making the purhase in the last 6 months. The <code>kde</code> distribution further illustrates how the long tail of recency is a strong indicator of churn.</p>\n",
     "\n",
     "<br>"
    ]
@@ -351,14 +325,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d15268d",
+   "id": "8d7e5583",
    "metadata": {},
    "source": [
-    "<hr>\n",
-    "\n",
     "<br>\n",
     "\n",
-    "<h2><font color='#3498DB'>Methodology</font></h2>"
+    "<p>The findings of the data exploration are as follows:</p>\n",
+    "\n",
+    "<ul>\n",
+    "    <li><b><code>has_churned</code></b> is a binary outcome, indicated by a 0 or 1.</li>\n",
+    "    <li><b><code>time_since_first_purchase</code></b>, or tenure, bears little relation to churn.</li>\n",
+    "    <li><b><code>time_since_last_purchase</code></b>, or recency, suggests that recent purchasers will not churn and idle purchasers will churn.</li>\n",
+    "</ul>\n",
+    "\n",
+    "<p>These findings coalesce as: <code>time_since_last_purchase</code><i>, or recency, is the best indicator of the</i> <code>has_churned</code> <i>status</i>. Therefore, our methodology will be to develop an analytical model to understand the relationship between churn and recency, and use the insights to build a strategy around customer churn.</p>\n",
+    "\n",
+    "<br>"
    ]
   },
   {
@@ -366,21 +348,31 @@
    "id": "8d18feb4",
    "metadata": {},
    "source": [
-    "<h3><font color='grey'>Why do we use logistic regression?</font></h3>\n",
+    "<hr>\n",
     "\n",
-    "<p>Churn is a <code>binary outcome</code>. Our customers either have or have not churned, as indicated by the presence of a 1 or 0. Therefore, our model has to predict this binary outcome based on a customer's recency, i.e. how does a customer's <code>time_since_last_purchase</code> impact whether or not a customer returns a <code>has_churned</code> value of 1? To answer this question, we use <code>logistic regression</code>, a method that differs from linear regression in a straightforward way - instead of building a line of best fit to minimise the residuals, we fit a line to maximise the likelihood (<code>maximum_likelihood</code>) of observing a True outcome. Good explanatory variables will produce an \"S-curve\".</p>\n",
+    "<br>\n",
     "\n",
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cef0744b",
-   "metadata": {},
-   "source": [
-    "<h3><font color='grey'>Using <code>statsmodels</code> to build a logistic regression function</font></h3>\n",
+    "<h2><font color='#3498DB'>Methodology</font></h2>\n",
     "\n",
-    "<p>We use the <code>statsmodel</code> package to build logistic regression. This is the preferred package for extracting insights from historical data which can be used to help make decisions (alternatively, <code>scikit-learn</code> is available for logistic regression exercises when optimising for machine learnning).</p>\n",
+    "<h3><font color='grey'>Logistic regression - why is this the appropriate method?</font></h3>\n",
+    "\n",
+    "<p>Churn is a <code>binary outcome</code>. Customers either have or have not churned, as indicated by the presence of a 1 or 0. The objective, therefore, is to understand how a customer's <code>time_since_last_purchase</code> impacts whether or not a customer returns a <code>has_churned</code> value of 1. Due to the binary nature of the churn data, <code>logistic regression</code> is the appropriate method of analysis.</p>\n",
+    "    \n",
+    "<p>Logistic regression differs from linear regression in a straightforward manner - instead of building a straight line of best fit to minimise the residuals, an \"S-curve\" is fitted to maximise the likelihood (<code>maximum_likelihood</code>) of observing a True outcome.</p>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<h3><font color='grey'>Using <code>statsmodels</code> to build logistic regression</font></h3>\n",
+    "\n",
+    "<p>The <code>statsmodel</code> package is used to build logistic regression. This is the preferred package for extracting insights from historical data which can be used to help make decisions (alternatively, <code>scikit-learn</code> is available for logistic regression exercises when optimising for machine learnning). A model is developed and stored in the below function with the following features:</p> \n",
+    "\n",
+    "<ul>\n",
+    "    <li><b><code>variables statement</code></b> - A statement of of <i>y ~ x</i> or <i>response ~ explanatory</i> variables that serve as model inputs, in this case <i>has_churned ~ time_since_last_purchase</i>.</li>\n",
+    "    <li><b><code>logit</code></b> - Builds the logistic regression.</li>\n",
+    "    <li><b><code>parameters</code></b> - Stored values to explain the relationship and produce predicted probabilities.</li>\n",
+    "    <li><b><code>predictions</code></b> - Predictions based off model paramters are produced and returned to the source data.</li>\n",
+    "    <li><b><code>confusion matrix</code></b> - A matrix of values used to assess the accuracy, or fit, of the model.</li>\n",
+    "</ul>\n",
     "\n",
     "<br>"
    ]
@@ -428,28 +420,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4d70215",
+   "id": "4a030814",
    "metadata": {},
    "source": [
     "<br>\n",
     "\n",
-    "<p>The <code>logit</code> function builds the model according to the variables statement of <i>y ~ x</i> or <i>response ~ explanatory</i>. This model stores the parameters to explain the relationship between <code>has_churned</code> and <code>time_since_last_purchase</code>, which can be used to produce a probability of churn based on future values. In this case, we call <code>.predict</code> on the origial data to see what outcome our model would have expected based on the observed relationship. This results in the following fields:</p>\n",
-    "\n",
-    "<ul>\n",
-    "    <li><b><code>has_churned</code></b> - An indicator of customer's actual outcome.</li>\n",
-    "    <li><b><code>mdl_prediction</code></b> - A predicted probability of churn, based on the overall relationship.</li>\n",
-    "    <li><b><code>mdl_prediction_outcome</code></b> - A prediction of the most likely outcome.</li>\n",
-    "</ul>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a030814",
-   "metadata": {},
-   "source": [
     "<h3><font color='grey'>Results</font></h3>\n",
     "\n",
-    "<p>We use the <code>statsmodel</code> package to build logistic regression. This is the preferred package for extracting insights from historical data which can be used to help make decisions (alternatively, <code>scikit-learn</code> is available for logistic regression exercises when optimising for machine learnning).</p>\n",
+    "<p>The <code>reg_log</code> function requires three inputs: <code>data</code>, <code>y</code>, and <code>x</code>. The output of the function is an object consisting of six objects, stored together as <code>mdl_output</code>. Each element can be retrieved from <code>mdl_output</code> by specifying the index, e.g. <code>mdl_output[0]</code> retrives the data, <code>mdl_output[2]</code> retrives the parameters. Only the data needs inspection at this point.</p>\n",
     "\n",
     "<br>"
    ]
@@ -605,10 +583,9 @@
     }
    ],
    "source": [
-    "# inputs\n",
+    "# reg_log variables\n",
     "data = df\n",
     "y = 'has_churned'\n",
-    "y_prediction = 'mdl_prediction_outcome'\n",
     "x = 'time_since_last_purchase'\n",
     "\n",
     "# run model\n",
@@ -624,10 +601,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4df0c2c7",
+   "metadata": {},
+   "source": [
+    "<p>As the <code>predictions</code> element of the <code>reg_log</code> function details, logistic regression returned two additional churn values to the data. Therefore the data presently consists of:</p>\n",
+    "\n",
+    "<ul>\n",
+    "    <li><b><code>has_churned</code></b> - An indicator of customer's actual outcome.</li>\n",
+    "    <li><b><code>mdl_prediction</code></b> - A predicted probability of churn, based on the overall relationship.</li>\n",
+    "    <li><b><code>mdl_prediction_outcome</code></b> - A prediction of the most likely outcome.</li>\n",
+    "</ul>\n",
+    "\n",
+    "<p>Having applied logistic regression and produced predictive outcomes, the data is analysed to understand the relationship between <code>has_churned</code> and <code>time_since_last_purchase</code>.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfb40ca1",
    "metadata": {},
    "source": [
+    "<hr>\n",
+    "\n",
     "<br>\n",
+    "\n",
+    "<h2><font color='#3498DB'>Analysis</font></h2>\n",
     "\n",
     "<h3><font color='grey'>The \"S-curve\"</font></h3>\n",
     "\n",
@@ -668,6 +665,9 @@
     "    ax.set_xlim(round(min(data[x]) - (max(data[x])/5),1), round(max(data[x]) + (max(data[x])/5),1))\n",
     "    ax.set_ylim(round(min(data[y]) - (max(data[y])/5),1), round(max(data[y]) + (max(data[y])/5),1))   \n",
     "    return ax\n",
+    "\n",
+    "# extra variables\n",
+    "y_prediction = 'mdl_prediction_outcome'\n",
     "\n",
     "# fig\n",
     "fig, ax_1 = plt.subplots(nrows=1, ncols=1, figsize=(12, 8))\n",
@@ -741,18 +741,6 @@
     "# show\n",
     "print(mdl_fit)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96e0991e",
-   "metadata": {},
-   "source": [
-    "<hr>\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "<h2><font color='#3498DB'>Analysis</font></h2>"
    ]
   },
   {
